compiler/tests/snapshots/snapshot_lir__lir_socket_stream_pdl.snap
---
source: compiler/tests/snapshot_lir.rs
expression: output
---
LirProgram (0 consts, 2 params, 0 inter-task bufs, 2 tasks, 0 probes)
  param freq: float = "100000" (cli: std::stof)
  param amp: float = "0.8f" (cli: std::stof)
  directives: mem=67108864, overrun=drop, timer=Fixed(10000)
  task 'receiver' @ 1000Hz K=1
    edge_buffers: _e2_3: float[1]
    firings:
      Actor_socket_read<float>("localhost:9200", dim(1)) -> [_e2_3]
      Actor_stdout<float><void>() [_e2_3] -> []
  task 'sender' @ 100000000Hz K=500
    edge_buffers: _e0_1: float[256]
    firings:
      Actor_sine<float><float>($freq, $amp, dim(256)) -> [_e0_1]
      Actor_socket_write<void>("localhost:9100", 0, dim(256)) [_e0_1] -> []
